--- a/packages/manager/apps/telecom/src/app/telecom/telephony/service/voicemail/management/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/telecom/src/app/telecom/telephony/service/voicemail/management/translations/Messages_fr_FR.json
@@ -9,5 +9,10 @@
   "telephony_line_answer_voicemail_directories_empty": "Vous n'avez aucun message.",
   "telephony_line_answer_voicemail_directories_caller": "Appelant",
   "telephony_line_answer_voicemail_directories_date": "Date",
-  "telephony_line_answer_voicemail_directories_duration": "Durée"
+  "telephony_line_answer_voicemail_directories_duration": "Durée",
+  "telephony_line_answer_voicemail_directories_transcript": "Voir la transcription (Bêta)",
+  "telephony_line_answer_voicemail_directories_transcript_modal_title": "Transcription (Bêta)",
+  "telephony_line_answer_voicemail_directories_transcript_modal_subtitle": "Cette transcription a été générée par Intelligence Artificielle",
+  "telephony_line_answer_voicemail_directories_transcript_modal_download": "Télécharger la transcription",
+  "telephony_line_answer_voicemail_directories_transcript_modal_close": "Fermer"
 }
